# fastapi-clean-architecture

./: .gitignore  Makefile  pyproject.toml
ops/docker/: docker-compose.prod.yml  docker-compose.yml
src/: __main__.py  app.py
src/application/usecase/: activity.py  analytics.py  home.py
src/config/: settings.py
src/domain/entity/: __init__.py
src/domain/entity/activity/: __init__.py  filter.py  model.py
src/domain/entity/analytics/: filter.py  model.py
src/domain/provider/: activity.py  analytics.py
src/domain/repository/: activity.py
src/infrastructure/db/postgres/: alembic.ini  session.py
src/infrastructure/db/postgres/migration/: env.py
src/infrastructure/db/postgres/migration/versions/: 2a9adaed4bd9_activity.py  e21f618f0616_activity.py
src/infrastructure/db/postgres/orm/: __init__.py  activity.py  base.py
src/infrastructure/provider/: activity.py  analytics.py
src/infrastructure/repository/activity/: postgres.py
src/presentation/: base.py
src/presentation/fastapi/: __init__.py
src/presentation/fastapi/controller/: activity.py  analytics.py  home.py
src/presentation/fastapi/template/: base.html
src/presentation/fastapi/template/activity/: index.html
src/presentation/fastapi/template/analytics/: index.html
src/presentation/fastapi/template/common/: footer.html  header.html
src/presentation/fastapi/template/home/: index.html
src/utils/: decorators.py  types.py
